完成 角色 菜单 接口的基本模型接口
